force-app/main/default/objects/Pharmacy_Sales_Insight_Session__c/Pharmacy_Sales_Insight_Session__c.object-meta.xml
<CustomObject>
    <label>Pharmacy Sales Insight Session</label>
    <nameField>
        <displayFormat>PSIS-{00000}</displayFormat>
        <label>Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharmacy Sales Insight Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>