force-app/main/default/objects/Pharmacy_Sales_Insight_Session__c/fields/Filter_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Filter_Snapshot__c</fullName>
    <label>Filter Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>