force-app/main/default/objects/Pharmacy_Sales_Insight_Session__c/fields/Insights_Payload__c.field-meta.xml
<CustomField>
    <fullName>Insights_Payload__c</fullName>
    <label>Insights Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>