force-app/main/default/objects/Pharmacy_Sales_Insight_Session__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agentforce</fullName>
                <default>true</default>
                <label>Agentforce</label>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>